изменил процедуру блокировки карты, сейчас карты блокируются через заявки админу
