# src/main/java/com/example/bankcards/util/enums/CardBlockRequestStatusEnum.java
@@ -1,0 +1,7 @@
+package com.example.bankcards.util.enums;
+
+public enum CardBlockRequestStatusEnum {
+    PENDING,
+    APPROVED,
+    REJECTED
+}
